force-app/main/default/objects/Applicant_Citizenship__c/fields/Citizenship_Name__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Name__c</fullName>
    <formula>TEXT(Citizenship__r.Nationality__c ) + &apos; &apos; +  TEXT(Citizenship__r.Basis__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citizenship Name</label>
    <type>Text</type>
</CustomField>