force-app/main/default/objects/Applicant_Citizenship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>Citizenship__c</columns>
    <columns>Applicant_Name__c</columns>
    <columns>Citizenship_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>